# pygalmesh

./: MANIFEST.in  README.md  packages.txt  pygalmesh_meshing_test.py  pyproject.toml  setup.cfg  setup.py
pygalmesh/: __init__.py  _cli.py  main.py
src/: generate_from_inr_with_features.cpp  generate_from_inr_with_features.hpp  generate_from_off.cpp  meson.build  pybind11.cpp
