[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "pybind11>=2.10",
]
build-backend = "setuptools.build_meta"


[project]
name = "pygalmesh"
version = "0.1.0"
description = "Python bindings for CGAL-based meshing (_pygalmesh)"
requires-python = ">=3.8"
authors = [{name = "SB"}]


[tool.setuptools.packages.find]
where = ["."]
include = ["pygalmesh*"]


[tool.setuptools.ext_modules."_pygalmesh"]
sources = [
  "src/generate.cpp",
  "src/generate_2d.cpp",
  "src/generate_from_inr.cpp",
  "src/generate_from_inr_with_features.cpp",
  "src/generate_from_off.cpp",
  "src/generate_periodic.cpp",
  "src/generate_surface_mesh.cpp",
  "src/remesh_surface.cpp",
  "src/pybind11.cpp",
]

include-dirs = [
  "/usr/include/eigen3/",
  "/usr/local/include/eigen3",
]

libraries = ["gmp", "mpfr", "tbb", "tbbmalloc"]

extra-compile-args = ["-O3"]

define-macros = [
  ["CGAL_LINKED_WITH_TBB", "1"],
  ["CGAL_CONCURRENT_MESH_3", "1"],
]